--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '6.1.0.jre8'
+	compile group: 'org.mybatis', name: 'mybatis', version: '3.4.4'
+	compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.1'
 }
